# cli-mit-fixins

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
mitfixins/: __init__.py  config.py  constants.py  decorators.py  exceptions.py  helper.py  utility.py
tests/: conftest.py  test_cli.py  test_cli_helper.py  test_decorators.py
tests/functional/: cli_sorted.py  cli_sorted_1.py  cli_sorted_2.py  cli_versioned_1.py  cli_versioned_2.py  test_coverage.py  test_functional.py
tests/unit/: test_config.py  test_decorators.py  test_utility.py
