[tool.poetry]
name = "cli-mit-fixins"
version = "0.2.0"
description = "Helpers for Click-based Python command line interfaces with features up the wazoo (see cookiecutter-cli-mit-fixins)."
authors = ["Dave Rogers <thedude@yukondude.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"
colorama = "^0.4.1"
toml = "^0.10.0"

[tool.poetry.dev-dependencies]
pytest = "^5.3"
coverage = "^4.5"
pre-commit = "^1.20"
pysnooper = "^0.3.0"
radon = "^4.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
